--- a/TestData/config.properties
+++ b/TestData/config.properties
@@ -5,4 +5,4 @@ BrowserName=Chrome
 #BrowserName=Firefox
 #BrowserName=Opera
 
-ApplicationURL=https://www.facebook.com/
+ApplicationURL=https://www.saucedemo.com/
