--- a/TestData/element.properties
+++ b/TestData/element.properties
@@ -13,3 +13,9 @@ signup_lastname_name=lastname
 signup_dob_day_name=birthday_day
 
 signup_signupbuttn_name=websubmit
+
+
+#Sauce Demo login page
+login_username_id=user-name
+login_password_name=password
+login_loginbttn_css=[value='Login']
